tests/e2e/assertions/spark-cluster/spark-cluster-worker-metrics-network-policy.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: (join('-', [$SPARK_CLUSTER_NAME, 'worker']))
  namespace: ($SPARK_APP_NAMESPACE)
spec:
  podSelector:
    matchLabels:
      spark-role: worker
      spark.operator/spark-cluster-name: ($SPARK_CLUSTER_NAME)
  ingress:
    - from:
        - podSelector:
            matchLabels:
              spark.operator/spark-cluster-name: ($SPARK_CLUSTER_NAME)
        - podSelector:
            matchLabels:
              spark-role: driver
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9404
          protocol: TCP
