tests/e2e/worker-metrics-network-policy/spark-cluster-example.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: spark.apache.org/v1
kind: SparkCluster
metadata:
  name: spark-cluster-metrics-test
  namespace: default
spec:
  runtimeVersions:
    sparkVersion: "4.2.0"
  clusterTolerations:
    instanceConfig:
      initWorkers: 1
      minWorkers: 1
      maxWorkers: 1
  workerSpec:
    networkPolicy:
      metricsPort: 9404
      metricsIngress:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: "monitoring"
  sparkConf:
    spark.kubernetes.container.image: "apache/spark:{{SPARK_VERSION}}"
